0.2.6
Fixed memory leak.
Fixed various gui glitches.
Fixed dragsize from widget.
Code clean.
Started theming.
0.2.5
Fixed resize flicker.
Fixed memory leaks.
Added more cli options.
Resize window tweaks.
Fixed title position.
Fixd about boxes being reshown.
Fixed moving windows when starting up.
Fixed menus AGAIN!
Done no placement.
Done open on center screen.
Done open window under mouse.
GUI tweaks.
Fixed cli options v/h/?.
Done centre window on monitor option.
Added default window placement to cli options.
Fixed memory leaks.

0.2.4
Moved bottom leftright draggers to top.
Done shade window.
Done windows with no controls?
Removed Xcomposite library.
Fixed not focusing in xterm.
Smoothed out resizing windows.
Added Xcomposite library.
Done focusing windows when switching desks.
Done position window title left/centre/right.
Added -p/--titleposition to command line options.
Done center window title vertically.
Changed rect to use same structure as lfslib.
Added -F/--font to command line options.

0.2.3
Fixed widget drag eesize.
Fixed window placing.
Fixed transient windows closing.
Fixed exiting.
Moved more events to client class.
Code clean.
Fixed frame position when framing.
Code clean.
Fixed min/max/below/above/alldesks AGAIN!
Sped up window drag move.
Fixed to flicker when changing desktops.
Fixed spurious desktop changes.
Fixed fullscreen window by 3rd party.
Fixed min/max window by 3rd party.
Fixed resizing.
Fixed fallback colours.
Added -f,-b and -t options to set forecolour,backcolour and textcolour of window frame decorations.
Added '-k' option to set message key.
Added lfstklib ( for future stuff).
Minor visual fix.

0.2.2
Fixed drag top left.
Fixed multple 'on top' windows.
Removed some debugging info.
Restore windows to respective desktops/states on startup.
Done sticky window.

0.2.1
Code clean.
Removed bits of legacy code.
Done switching desktops.
Done restack.
Fixed x11 _NET_CLIENT_LIST_STACKING.
Fixed windows above.
Fixed windows below.